k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scalable-app-svc
  namespace: scalable-app
spec:
  type: ClusterIP
  selector:
    app: scalable-app
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
